translation/04-parsers-generator/src/main/antlr/org/generator/.antlr/GrammarParser.java
// Generated from /home/igor/Documents/courses/translation/parsers-generator/src/main/antlr/org/generator/GrammarParser.g4 by ANTLR 4.9.2

package org.generator;

import org.generator.util.GrammarItem;
import org.generator.util.Import;
import org.generator.util.LexerRule;
import org.generator.util.ParserRule;

import org.generator.util.Alternative;
import org.generator.util.ParserRule.AlternativeItem;
import org.generator.util.Attribute;
import org.generator.util.ParserRule.CodeInsertion;
import org.generator.util.ParserRule.ParserRuleCall;
import org.generator.util.ParserRule.TerminalTransition;

import java.util.List;
import java.util.Map;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Import=1, Val=2, Def=3, Colon=4, Semicolon=5, Comma=6, OpeningBracket=7, 
		ClosingBracket=8, Identifier=9, Arrow=10, RegularExpression=11, Pipe=12, 
		Whitespaces=13;
	public static final int
		RULE_grammarDescription = 0, RULE_rule = 1, RULE_javaImport = 2, RULE_lexerRuleDeclaration = 3, 
		RULE_parserRuleDeclaration = 4, RULE_attributes = 5, RULE_attribute = 6, 
		RULE_alternatives = 7, RULE_alternative = 8, RULE_unit = 9, RULE_codeInsertion = 10, 
		RULE_token = 11, RULE_maybeCall = 12, RULE_callArguments = 13, RULE_callArgument = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"grammarDescription", "rule", "javaImport", "lexerRuleDeclaration", "parserRuleDeclaration", 
			"attributes", "attribute", "alternatives", "alternative", "unit", "codeInsertion", 
			"token", "maybeCall", "callArguments", "callArgument"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'val'", "'def'", "':'", "';'", "','", "'['", "']'", 
			null, "'->'", null, "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Import", "Val", "Def", "Colon", "Semicolon", "Comma", "OpeningBracket", 
			"ClosingBracket", "Identifier", "Arrow", "RegularExpression", "Pipe", 
			"Whitespaces"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GrammarDescriptionContext extends ParserRuleContext {
		public List<GrammarItem> values;
		public List<RuleContext> rule() {
			return getRuleContexts(RuleContext.class);
		}
		public RuleContext rule(int i) {
			return getRuleContext(RuleContext.class,i);
		}
		public GrammarDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarDescription; }
	}

	public final GrammarDescriptionContext grammarDescription() throws RecognitionException {
		GrammarDescriptionContext _localctx = new GrammarDescriptionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarDescription);
		 ((GrammarDescriptionContext)_localctx).values =  new ArrayList<>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30);
				rule(_localctx.values);
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Import) | (1L << Val) | (1L << Def))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleContext extends ParserRuleContext {
		public List<GrammarItem> values;
		public TerminalNode Import() { return getToken(GrammarParser.Import, 0); }
		public JavaImportContext javaImport() {
			return getRuleContext(JavaImportContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(GrammarParser.Semicolon, 0); }
		public TerminalNode Val() { return getToken(GrammarParser.Val, 0); }
		public LexerRuleDeclarationContext lexerRuleDeclaration() {
			return getRuleContext(LexerRuleDeclarationContext.class,0);
		}
		public TerminalNode Def() { return getToken(GrammarParser.Def, 0); }
		public ParserRuleDeclarationContext parserRuleDeclaration() {
			return getRuleContext(ParserRuleDeclarationContext.class,0);
		}
		public RuleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RuleContext(ParserRuleContext parent, int invokingState, List<GrammarItem> values) {
			super(parent, invokingState);
			this.values = values;
		}
		@Override public int getRuleIndex() { return RULE_rule; }
	}

	public final RuleContext rule(List<GrammarItem> values) throws RecognitionException {
		RuleContext _localctx = new RuleContext(_ctx, getState(), values);
		enterRule(_localctx, 2, RULE_rule);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Import:
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				match(Import);
				setState(36);
				javaImport(_localctx.values);
				setState(37);
				match(Semicolon);
				}
				break;
			case Val:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				match(Val);
				setState(40);
				lexerRuleDeclaration(_localctx.values);
				setState(41);
				match(Semicolon);
				}
				break;
			case Def:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				match(Def);
				setState(44);
				parserRuleDeclaration(_localctx.values);
				setState(45);
				match(Semicolon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JavaImportContext extends ParserRuleContext {
		public List<GrammarItem> values;
		public Token RegularExpression;
		public TerminalNode RegularExpression() { return getToken(GrammarParser.RegularExpression, 0); }
		public JavaImportContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public JavaImportContext(ParserRuleContext parent, int invokingState, List<GrammarItem> values) {
			super(parent, invokingState);
			this.values = values;
		}
		@Override public int getRuleIndex() { return RULE_javaImport; }
	}

	public final JavaImportContext javaImport(List<GrammarItem> values) throws RecognitionException {
		JavaImportContext _localctx = new JavaImportContext(_ctx, getState(), values);
		enterRule(_localctx, 4, RULE_javaImport);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			((JavaImportContext)_localctx).RegularExpression = match(RegularExpression);

			            {
			                final var text = (((JavaImportContext)_localctx).RegularExpression!=null?((JavaImportContext)_localctx).RegularExpression.getText():null);
			                _localctx.values.add(new Import(text.substring(1, text.length() - 1)));
			            }
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexerRuleDeclarationContext extends ParserRuleContext {
		public List<GrammarItem> values;
		public LexerRule value;
		public Token Identifier;
		public Token RegularExpression;
		public TerminalNode Identifier() { return getToken(GrammarParser.Identifier, 0); }
		public TerminalNode Colon() { return getToken(GrammarParser.Colon, 0); }
		public TerminalNode RegularExpression() { return getToken(GrammarParser.RegularExpression, 0); }
		public LexerRuleDeclarationContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public LexerRuleDeclarationContext(ParserRuleContext parent, int invokingState, List<GrammarItem> values) {
			super(parent, invokingState);
			this.values = values;
		}
		@Override public int getRuleIndex() { return RULE_lexerRuleDeclaration; }
	}

	public final LexerRuleDeclarationContext lexerRuleDeclaration(List<GrammarItem> values) throws RecognitionException {
		LexerRuleDeclarationContext _localctx = new LexerRuleDeclarationContext(_ctx, getState(), values);
		enterRule(_localctx, 6, RULE_lexerRuleDeclaration);
		 ((LexerRuleDeclarationContext)_localctx).value =  new LexerRule(); 
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			((LexerRuleDeclarationContext)_localctx).Identifier = match(Identifier);
			 _localctx.value.setName((((LexerRuleDeclarationContext)_localctx).Identifier!=null?((LexerRuleDeclarationContext)_localctx).Identifier.getText():null)); 
			setState(54);
			match(Colon);
			setState(55);
			((LexerRuleDeclarationContext)_localctx).RegularExpression = match(RegularExpression);

			            {
			                final var text = (((LexerRuleDeclarationContext)_localctx).RegularExpression!=null?((LexerRuleDeclarationContext)_localctx).RegularExpression.getText():null);
			                _localctx.value.setRegularExpression(text.substring(1, text.length() - 1));
			            }
			        

			            _localctx.values.add(_localctx.value);
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParserRuleDeclarationContext extends ParserRuleContext {
		public List<GrammarItem> values;
		public ParserRule value;
		public AttributesContext attributes;
		public Token Identifier;
		public List<AttributesContext> attributes() {
			return getRuleContexts(AttributesContext.class);
		}
		public AttributesContext attributes(int i) {
			return getRuleContext(AttributesContext.class,i);
		}
		public TerminalNode Identifier() { return getToken(GrammarParser.Identifier, 0); }
		public TerminalNode Arrow() { return getToken(GrammarParser.Arrow, 0); }
		public TerminalNode Colon() { return getToken(GrammarParser.Colon, 0); }
		public List<AlternativesContext> alternatives() {
			return getRuleContexts(AlternativesContext.class);
		}
		public AlternativesContext alternatives(int i) {
			return getRuleContext(AlternativesContext.class,i);
		}
		public ParserRuleDeclarationContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ParserRuleDeclarationContext(ParserRuleContext parent, int invokingState, List<GrammarItem> values) {
			super(parent, invokingState);
			this.values = values;
		}
		@Override public int getRuleIndex() { return RULE_parserRuleDeclaration; }
	}

	public final ParserRuleDeclarationContext parserRuleDeclaration(List<GrammarItem> values) throws RecognitionException {
		ParserRuleDeclarationContext _localctx = new ParserRuleDeclarationContext(_ctx, getState(), values);
		enterRule(_localctx, 8, RULE_parserRuleDeclaration);
		 ((ParserRuleDeclarationContext)_localctx).value =  new ParserRule(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			((ParserRuleDeclarationContext)_localctx).attributes = attributes();

			          _localctx.value.inherited = ((ParserRuleDeclarationContext)_localctx).attributes.list;
			      
			setState(61);
			((ParserRuleDeclarationContext)_localctx).Identifier = match(Identifier);

			          _localctx.value.name = (((ParserRuleDeclarationContext)_localctx).Identifier!=null?((ParserRuleDeclarationContext)_localctx).Identifier.getText():null);
			      
			setState(63);
			match(Arrow);
			setState(64);
			((ParserRuleDeclarationContext)_localctx).attributes = attributes();

			          _localctx.value.inner = ((ParserRuleDeclarationContext)_localctx).attributes.list;
			      
			setState(66);
			match(Colon);
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				alternatives(_localctx.value);
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Identifier) | (1L << RegularExpression) | (1L << Pipe))) != 0) );

			          _localctx.values.add(_localctx.value);
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributesContext extends ParserRuleContext {
		public List<Attribute> list;
		public AttributeContext attribute;
		public TerminalNode OpeningBracket() { return getToken(GrammarParser.OpeningBracket, 0); }
		public TerminalNode ClosingBracket() { return getToken(GrammarParser.ClosingBracket, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(GrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(GrammarParser.Comma, i);
		}
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
	}

	public final AttributesContext attributes() throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attributes);
		 ((AttributesContext)_localctx).list =  new ArrayList<>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(OpeningBracket);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RegularExpression) {
				{
				setState(82);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(75);
					((AttributesContext)_localctx).attribute = attribute();
					 _localctx.list.add(((AttributesContext)_localctx).attribute.value); 
					}
					break;
				case 2:
					{
					setState(78);
					((AttributesContext)_localctx).attribute = attribute();
					 _localctx.list.add(((AttributesContext)_localctx).attribute.value); 
					setState(80);
					match(Comma);
					}
					break;
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(ClosingBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public Attribute value;
		public Token RegularExpression;
		public Token Identifier;
		public TerminalNode RegularExpression() { return getToken(GrammarParser.RegularExpression, 0); }
		public TerminalNode Identifier() { return getToken(GrammarParser.Identifier, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attribute);
		((AttributeContext)_localctx).value =  new Attribute();
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			((AttributeContext)_localctx).RegularExpression = match(RegularExpression);

			            {
			                final var text = (((AttributeContext)_localctx).RegularExpression!=null?((AttributeContext)_localctx).RegularExpression.getText():null);
			                _localctx.value.setType(text.substring(1, text.length() - 1));
			            }
			      
			setState(91);
			((AttributeContext)_localctx).Identifier = match(Identifier);

			            _localctx.value.setName((((AttributeContext)_localctx).Identifier!=null?((AttributeContext)_localctx).Identifier.getText():null));
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativesContext extends ParserRuleContext {
		public ParserRule value;
		public AlternativeContext alternative;
		public List<AlternativeContext> alternative() {
			return getRuleContexts(AlternativeContext.class);
		}
		public AlternativeContext alternative(int i) {
			return getRuleContext(AlternativeContext.class,i);
		}
		public List<TerminalNode> Pipe() { return getTokens(GrammarParser.Pipe); }
		public TerminalNode Pipe(int i) {
			return getToken(GrammarParser.Pipe, i);
		}
		public AlternativesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AlternativesContext(ParserRuleContext parent, int invokingState, ParserRule value) {
			super(parent, invokingState);
			this.value = value;
		}
		@Override public int getRuleIndex() { return RULE_alternatives; }
	}

	public final AlternativesContext alternatives(ParserRule value) throws RecognitionException {
		AlternativesContext _localctx = new AlternativesContext(_ctx, getState(), value);
		enterRule(_localctx, 14, RULE_alternatives);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==Pipe) {
						{
						setState(94);
						match(Pipe);
						}
					}

					setState(97);
					((AlternativesContext)_localctx).alternative = alternative();

					            _localctx.value.alternatives.add(((AlternativesContext)_localctx).alternative.line);
					        
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(102); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativeContext extends ParserRuleContext {
		public Alternative line;
		public List<UnitContext> unit() {
			return getRuleContexts(UnitContext.class);
		}
		public UnitContext unit(int i) {
			return getRuleContext(UnitContext.class,i);
		}
		public AlternativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternative; }
	}

	public final AlternativeContext alternative() throws RecognitionException {
		AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_alternative);
		 ((AlternativeContext)_localctx).line =  new Alternative(); 
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(104);
					unit(_localctx.line);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(107); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitContext extends ParserRuleContext {
		public Alternative units;
		public CodeInsertionContext codeInsertion() {
			return getRuleContext(CodeInsertionContext.class,0);
		}
		public TokenContext token() {
			return getRuleContext(TokenContext.class,0);
		}
		public UnitContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public UnitContext(ParserRuleContext parent, int invokingState, Alternative units) {
			super(parent, invokingState);
			this.units = units;
		}
		@Override public int getRuleIndex() { return RULE_unit; }
	}

	public final UnitContext unit(Alternative units) throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState(), units);
		enterRule(_localctx, 18, RULE_unit);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RegularExpression:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				codeInsertion(_localctx.units);
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				token(_localctx.units);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeInsertionContext extends ParserRuleContext {
		public Alternative units;
		public Token RegularExpression;
		public TerminalNode RegularExpression() { return getToken(GrammarParser.RegularExpression, 0); }
		public CodeInsertionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public CodeInsertionContext(ParserRuleContext parent, int invokingState, Alternative units) {
			super(parent, invokingState);
			this.units = units;
		}
		@Override public int getRuleIndex() { return RULE_codeInsertion; }
	}

	public final CodeInsertionContext codeInsertion(Alternative units) throws RecognitionException {
		CodeInsertionContext _localctx = new CodeInsertionContext(_ctx, getState(), units);
		enterRule(_localctx, 20, RULE_codeInsertion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			((CodeInsertionContext)_localctx).RegularExpression = match(RegularExpression);

			            final var text = (((CodeInsertionContext)_localctx).RegularExpression!=null?((CodeInsertionContext)_localctx).RegularExpression.getText():null);
			            final var code = text.substring(1, text.length() - 1);
			            units.addItem(new CodeInsertion(code));
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokenContext extends ParserRuleContext {
		public Alternative units;
		public String name;
		public Token Identifier;
		public MaybeCallContext maybeCall;
		public TerminalNode Identifier() { return getToken(GrammarParser.Identifier, 0); }
		public MaybeCallContext maybeCall() {
			return getRuleContext(MaybeCallContext.class,0);
		}
		public TokenContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TokenContext(ParserRuleContext parent, int invokingState, Alternative units) {
			super(parent, invokingState);
			this.units = units;
		}
		@Override public int getRuleIndex() { return RULE_token; }
	}

	public final TokenContext token(Alternative units) throws RecognitionException {
		TokenContext _localctx = new TokenContext(_ctx, getState(), units);
		enterRule(_localctx, 22, RULE_token);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			((TokenContext)_localctx).Identifier = match(Identifier);

			            ((TokenContext)_localctx).name =  (((TokenContext)_localctx).Identifier!=null?((TokenContext)_localctx).Identifier.getText():null);
			        
			setState(118);
			((TokenContext)_localctx).maybeCall = maybeCall(_localctx.name);

			            final var parserRules = ((TokenContext)_localctx).maybeCall.parserRules;
			            final var item = parserRules == null ? new TerminalTransition(_localctx.name) : parserRules;
			            units.addItem(item);
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MaybeCallContext extends ParserRuleContext {
		public String name;
		public ParserRuleCall parserRules;
		public TerminalNode OpeningBracket() { return getToken(GrammarParser.OpeningBracket, 0); }
		public TerminalNode ClosingBracket() { return getToken(GrammarParser.ClosingBracket, 0); }
		public CallArgumentsContext callArguments() {
			return getRuleContext(CallArgumentsContext.class,0);
		}
		public MaybeCallContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MaybeCallContext(ParserRuleContext parent, int invokingState, String name) {
			super(parent, invokingState);
			this.name = name;
		}
		@Override public int getRuleIndex() { return RULE_maybeCall; }
	}

	public final MaybeCallContext maybeCall(String name) throws RecognitionException {
		MaybeCallContext _localctx = new MaybeCallContext(_ctx, getState(), name);
		enterRule(_localctx, 24, RULE_maybeCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OpeningBracket) {
				{
				setState(121);
				match(OpeningBracket);

				            ((MaybeCallContext)_localctx).parserRules =  new ParserRuleCall(_localctx.name);
				        
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Identifier) {
					{
					setState(123);
					callArguments(_localctx.parserRules);
					}
				}

				setState(126);
				match(ClosingBracket);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
